Fix alignment issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,10 @@ md-content{
   width:100%;
 }
 
+md-input-container .md-errors-spacer{
+  min-height: 0px !important;
+}
+
 #todoItems {
 	border-radius: 4px;
 	color: #2196f3;
